--- a/openmeetings-web/src/main/webapp/css/raw-general.css
+++ b/openmeetings-web/src/main/webapp/css/raw-general.css
@@ -752,6 +752,7 @@ select.messages.selector {
 	position: fixed;
 	right: 0;
 	bottom: 0;
+	z-index: calc(var(--chat-zindex) + 2);
 }
 .popover.confirmation.show {
 	z-index: 3000; /* FIXME TODO move this to variables */
