--- a/openmeetings-web/src/main/webapp/css/raw-variables.css
+++ b/openmeetings-web/src/main/webapp/css/raw-variables.css
@@ -14,6 +14,7 @@ body {
 	--chat-tools-height: 40px;
 	--chat-msg-height: 80px;
 	--chat-send-width: 32px;
+	--chat-zindex: 2000;
 }
 body.no-header {
 	--header-height: 0px;
